--- a/참고자료들.md
+++ b/참고자료들.md
@@ -1,2 +1,4 @@
 * https://popcorntree.tistory.com/category/Programming/게임서버%20프로그래밍%28Game%20Server%20Programming%29  
 * LockFreeStack -> iocp Memory2 참조
+* 멀티스레딩 관련 좋은 자료  
+https://3dmpengines.tistory.com/category/%EC%9A%B4%EC%98%81%EC%B2%B4%EC%A0%9C%20%26%20%EB%B3%91%EB%A0%AC%EC%B2%98%EB%A6%AC/Multithread  
